Bug 1555294 - Adding addrbook-list-member-removed observer notification (test by darktrojan). r=mkmelin